# custom-syntax-for-python

./: README.md  pyproject.toml
.github/workflows/: publish.yml
csp/: csp.py
